# mlir-experiments

./: .bazelrc  .gitignore  CMakeLists.txt  FIRST_BUILD.sh  make.sh  mlir-opt
experiments/: cf.mlir  llvmcf.mlir
lib/Dialect/Poly/: CMakeLists.txt  PolyDialect.cpp  PolyDialect.h  PolyTypes.td
lib/Transform/Affine/: AffineFullUnroll.cpp  AffineFullUnroll.h  AffineFullUnrollPatternRewrite.cpp  AffineFullUnrollPatternRewrite.h  CMakeLists.txt  Passes.h
lib/Transform/Arith/: CMakeLists.txt  MulToAdd.cpp  MulToAdd.h  Passes.h
tests/: .lit_test_times.txt  CMakeLists.txt  affine_loop_unroll.mlir  ctlz_simple.mlir  ctlz_simple_functional.mlir  lit.cfg.py  mul_to_add.mlir  unrollable_loop.mlir
tests/Output/: ctlz_simple.mlir.script
tools/: CMakeLists.txt  tutorial-opt.cpp
